# FetchEO

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pdoc.yml  python-app.yml
src/fetcheo/: loader.py  main.py
src/fetcheo/downloaders/: _downloader.py  ecira.py  era5.py  esacci_landcover.py  modis_ndvi.py  sen2_aws.py  sen2_openeo.py  sen3_cdse.py  sen3_openeo.py  spei.py
test/: test_downloaders.py  test_downloaders_old.py  test_loader.py
test/test_downloaders/: test_era5.py  test_modis_ndvi.py  test_sen3_openeo.py
