[project]
name = "project-name"
version = "0.0.1"
authors = [
  { name="FirstName LastName", email="firstname.lastname@dlr.de" },
]
description = "Project description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
    "requests",
    "geopandas",
    "numpy",
    "xarray",
    "rioxarray",
    "h5netcdf",
    "h5py",
    "netcdf4",
    "cdsapi",
    "pydot",
    "pygraphviz",
    "cdsapi",
    "networkx",
    "duckdb",
    "networkx",
    "pystac-client",
    "satpy",
    "openeo"
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/project-name"
Issues = "https://github.com/DLR-MF-DAS/project-name/issues"
