[project]
name = "fetcheo"
version = "0.0.1"
authors = [
  { name="Samuel Garske", email="samuel.garske@dlr.de" },
]
description = "A collection of downloaders for different Earth observation data sources."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
    "requests",
    "geopandas",
    "numpy",
    "xarray",
    "rioxarray",
    "h5netcdf",
    "h5py",
    "netcdf4",
    "cdsapi",
    "pydot",
    "pygraphviz",
    "cdsapi",
    "networkx",
    "duckdb",
    "networkx",
    "pystac-client",
    "pyorbital",
    "satpy",
    "openeo"
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/FetchEO"
Issues = "https://github.com/DLR-MF-DAS/FetchEO/issues"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"